<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.example.rajivr.escort_3.Login">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login_text"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.03"
            android:textColor="#03a0fb"
            android:textSize="50dp" />/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="NetID"
            android:layout_weight="0.03" />


        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="100*******"
            android:layout_weight="0.03" />


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="Password"
            android:layout_weight="0.03" />

        <RadioGroup
            android:id="@+id/radioUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diver_text"
                android:layout_weight="0.03"
                android:allowUndo="true"
                style="@style/Base.AlertDialog.AppCompat.Light"
                android:textColor="#03a0fb" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rider_text"
                android:layout_weight="0.03"
                android:textColor="#03a0fb" />
        </RadioGroup>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginbotton_text"
                android:onClick="login"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/textview"
                android:layout_toStartOf="@+id/textview"
                android:layout_gravity="left"

                />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SIGN-UP"
                android:onClick="signup"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/login_button"
                android:layout_toEndOf="@+id/textview"
                android:layout_gravity="right"
                />
        </RelativeLayout>




    </LinearLayout>
</RelativeLayout>